cmake_minimum_required(VERSION 3.9.0)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../../PrecompiledSamples/DS77_Samples")
include_directories("../../../Include")
LINK_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../../../Lib/")

if(NOT(EXISTS "${OUTPUT_PATH}" AND IS_DIRECTORY "${OUTPUT_PATH}"))
    file(MAKE_DIRECTORY ${OUTPUT_PATH}) 
endif()

SET(EXECUTABLE_OUTPUT_PATH "${OUTPUT_PATH}")

add_subdirectory(DevHotPlugCallback)
add_subdirectory(DeviceConnectByAlias)
add_subdirectory(DeviceConnectByIP)
add_subdirectory(DeviceHWTriggerMode)
add_subdirectory(DeviceInfoGet)
add_subdirectory(DeviceParamGet)
add_subdirectory(DeviceSearchAndConnect)
add_subdirectory(DeviceStartStopSteaming)
add_subdirectory(DeviceSWTriggerMode)
add_subdirectory(FrameCaptureAndSave)
add_subdirectory(MultiConnection)
add_subdirectory(PointCloudCaptureAndSave)